Create examination endpoints
